<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".NewToDoActivity">

    <EditText
        android:id="@+id/edit_todo"
        android:hint="@string/hint_todo"
        android:inputType="textAutoComplete"
        android:padding="6dp"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/save_text"
        android:textColor="@android:color/primary_text_light_nodisable"
        android:textSize="18sp" />

</LinearLayout>
